--- a/accsets/login.html
+++ b/accsets/login.html
@@ -4,6 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign In To Ocean</title>
+    <link rel="shortcut icon" type="image/jpg" href="https://www.designzillas.com/sites/default/files/2019-07/zilla-head-1.png"/>
     <link rel="stylesheet" href="./login.css">
     <link rel="stylesheet" href="./responsive.css">
 </head>
@@ -135,7 +136,7 @@
             alert("Thành công rồi hihi:> đến trang web Ocean ngay thôi nào:>")
         }
         function dieu_huong(){
-            location.assign('./login.html');
+            location.assign('https://luumanhcuong.github.io/Ocean/accsets/index.html');
         }
     </script>
 </body>
